--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
       postgres:
         image: postgres:13
         env:
-          POSTGRES_DB: test_db
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: forumapi_test
+          POSTGRES_USER: developer
+          POSTGRES_PASSWORD: supersecretpassworf
         ports:
           - 5432:5432
         options: >-
