--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_DB: forumapi_test
           POSTGRES_USER: developer
-          POSTGRES_PASSWORD: supersecretpassworf
+          POSTGRES_PASSWORD: supersecretpassword
         ports:
           - 5432:5432
         options: >-
