--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm i -g @railway/cli
 
       - name: Login Railway (CI Mode)
-        run: echo $RAILWAY_TOKEN | railway login --ci
+        run: railway login --json "$RAILWAY_TOKEN"
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
