--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,22 +8,20 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: forum-api / production
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Check if token is loaded
+      - name: Debug token
         run: |
           if [ -z "$RAILWAY_TOKEN" ]; then
             echo "❌ RAILWAY_TOKEN is NOT set"
             exit 1
           else
             echo "✅ RAILWAY_TOKEN is set"
-            echo "Token length: ${#RAILWAY_TOKEN}"
           fi
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
