--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,7 @@ jobs:
           --health-retries=5
 
     env:
-      PGHOST_TEST: localhost
-      PGPORT_TEST: 5432
-      PGUSER_TEST: developer
-      PGPASSWORD_TEST: supersecretpassword
-      PGDATABASE_TEST: forumapi_test
+      DATABASE_URL_TEST: "postgresql://postgres:HsIGIVeuNckhxEAqihhJMuXdOiaNUNbA@postgres-kxlg.railway.internal:5432/railway"
       ACCESS_TOKEN_KEY: supersecretaccesstoken
       REFRESH_TOKEN_KEY: supersecretrefreshtoken
       ACCESS_TOKEN_AGE: 3000
