--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "pg": "^8.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/jest": "^26.0.24",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "globals": "^16.5.0",
     "jest": "^27.0.6",
     "node-pg-migrate": "^5.10.0",
     "nodemon": "^2.0.9"
