delete burst and delay on nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,16 +7,10 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
 
-        location /threads/ {
-            limit_req zone=threads_limit burst=5 nodelay;
+        location ~ ^/threads {
+            limit_req zone=threads_limit;
             limit_req_status 429;
-
-            proxy_pass http://localhost:5000;
-        }
-
-        location / {
             proxy_pass http://localhost:5000;
         }
 
@@ -28,3 +22,4 @@ http {
         }
     }
 }
+
