--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "node src/app.js",
     "start:dev": "nodemon src/app.js",
-    "test": "jest --setupFiles dotenv/config -i",
-    "test:watch:change": "jest --watch --setupFiles dotenv/config -i",
-    "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config -i",
+    "test": "cross-env NODE_ENV=test jest --setupFiles dotenv/config -i",
+    "test:watch": "cross-env NODE_ENV=test jest --watchAll --coverage --setupFiles dotenv/config -i",
     "migrate": "node-pg-migrate",
     "migrate:test": "node-pg-migrate up -f config/database/test.json"
   },
@@ -21,6 +20,7 @@
     "auto-bind": "^5.0.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "hapi-rate-limit": "^8.0.0",
     "instances-container": "^2.0.3",
     "nanoid": "^3.1.23",
     "pg": "^8.6.0"
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/jest": "^26.0.24",
+    "cross-env": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
