fix bug on railway deploy

--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "jest": "^27.0.6",
     "node-pg-migrate": "^5.10.0",
     "nodemon": "^2.0.9"
+  },
+  "engines": {
+    "node": ">=18 <20"
   }
 }
