--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:dev": "nodemon src/app.js",
     "test": "cross-env NODE_ENV=test jest --setupFiles dotenv/config -i",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll --coverage --setupFiles dotenv/config -i",
+    "lint": "eslint .",
     "migrate": "node-pg-migrate",
     "migrate:test": "node-pg-migrate up -f config/database/test.json"
   },
@@ -30,7 +31,7 @@
     "@eslint/js": "^9.39.2",
     "@types/jest": "^26.0.24",
     "cross-env": "^10.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^9.39.2",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "globals": "^16.5.0",
